add webpack bundling, sourcemaps

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Suhhh duhhh</h1>
+	<h1>Suhhhh duhhhh</h1>
+	<script src="bundle.js">	</script>
 </body>
 </html>
